// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui:create:atomic when using an existing legacy search page (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "1YlrWbKI6kgpcX/5spCmIko0kgg=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "KwR4eJKGc+ZXRbIX4Jhn40THSpI=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "aylWHwQHlU7F0KpZuJopvDi6u/4=",
                  "name": "template-1.html",
                },
              ],
              "hash": "t9fG5B9toXvcybK/ypFbrMJDTao=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "sWUDtgn9DiTjvYlLdoF4EaGoClw=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "pPdA06Q+ujtEyI7kflypbd5kiUg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "pIrl+qNoENInjtVxeEnRQC5X+s4=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "dIKI3aRn/2K6aO5RgC2zfGQ2wg8=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "e5DQ3kRU03Vmp2BC+mjlSypQjKE=",
              "name": "index.css",
            },
          ],
          "hash": "IMDEBLQ/slaFFRst+lJYHMRm07E=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Yhwg1zaohXJmi0xJFywAlsL02ZA=",
              "name": "atomic.ts",
            },
          ],
          "hash": "ZyOIYW/4w45sOzwmwIaFevE1VVM=",
          "name": "utils",
        },
      ],
      "hash": "K9gD9O4uCLlQbxYAgmEW6K+5EAw=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "TZXkS/G4E85OYZrwyJxf/QI7lJ8=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing next gen search page (--pageId flag specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "1YlrWbKI6kgpcX/5spCmIko0kgg=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [],
      "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "KgjYp/iQUQT5BeQqpR/hXS7pOy0=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "Ko4cbmFzfOTdS1hr1HGU0cIrtOM=",
                  "name": "template-1.html",
                },
              ],
              "hash": "4hIP+uRwgSi1+UuvlB+7T+k79bI=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "sWUDtgn9DiTjvYlLdoF4EaGoClw=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "pPdA06Q+ujtEyI7kflypbd5kiUg=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "uNaVrxKWu4DcnVJTCz+9hVGWQ2Q=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "lIIVFoYP+9d6H0rrdSp9lYPxeWw=",
              "name": "sample-result-component",
            },
          ],
          "hash": "9ySon/mm3QAtSCUsyLo8J96FrkY=",
          "name": "components",
        },
        HashedFile {
          "hash": "2/Ssowtzkh/hx4e9vrMi11FFp1Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "/MC1IvlmPW0zAgfo82n8CnBDMrA=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "dIKI3aRn/2K6aO5RgC2zfGQ2wg8=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "GTe7oCz+pSCsM8PXrji6iYc3iq0=",
              "name": "index.css",
            },
          ],
          "hash": "6hnWHe6xxYFfk5iqbZDpprtBgUk=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "Yhwg1zaohXJmi0xJFywAlsL02ZA=",
              "name": "atomic.ts",
            },
          ],
          "hash": "ZyOIYW/4w45sOzwmwIaFevE1VVM=",
          "name": "utils",
        },
      ],
      "hash": "t8fIknhLbnltSfNoodcS9MQfGSM=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "yR554ZvROimOPuI3h7YM5DyVwQU=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using an existing pageId (using the list prompt of available pages) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "ggJcPENEYrkDlKP1rUoQNPE0JhM=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "M9F3lIlTmnV3mnsbtZgfpkfA7fc=",
                  "name": "template-1.html",
                },
              ],
              "hash": "07o/Hx3M8Lf/E88LFkbIQBseMYA=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "cLJy/0XAUwc0A3avxtG5LmqNsfo=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "xbqB+xpmHNlBnQf+PCHR+rT3tfg=",
              "name": "index.css",
            },
          ],
          "hash": "Z+bQXHQFJdpSE56ncUOv3fWRy6w=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "9IWPASf2gKXfg4rrJ+k4DSwv4c4=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "20bLNlmkPR5jmaL2CitCTveWor8=",
  "name": "normalizedDir",
}
`;

exports[`ui:create:atomic when using the default page config (pageId not specified) the project has been generated properly 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "bBk6DoprMUqcw8a48oUQpkyFxkE=",
      "name": "deployment.esbuild.mjs",
    },
    HashedFile {
      "hash": "+t+HILvU+0OvGuKuRvbcamfBMRw=",
      "name": "README.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "dZCPeiAxqOaVVtRsZz+MidfshDs=",
          "name": "clean-up.js",
        },
        HashedFile {
          "hash": "SPggJ4gGqtRc5+8WHpeKd/gQcf0=",
          "name": "utils.js",
        },
      ],
      "hash": "UEgD2PjQu6qgn3nWQVaFnfNtfCg=",
      "name": "scripts",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "OvDBAuwZSXzJKEDTu2h16xwmS/4=",
                  "name": "results-manager.tsx",
                },
                HashedFile {
                  "hash": "OMU1pEfGxxywcokm8aFD8znPyaI=",
                  "name": "template-1.html",
                },
              ],
              "hash": "Dfe37MVrxMYCBJksItHWKh4iFRU=",
              "name": "results-manager",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                  "name": "sample-component.css",
                },
                HashedFile {
                  "hash": "DP1K1CMgX0s13uPyh6DxDf2KDUI=",
                  "name": "sample-component.tsx",
                },
              ],
              "hash": "hxdjpR//PsLO6dvB4OghA4MkP8A=",
              "name": "sample-component",
            },
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                  "name": "sample-result-component.css",
                },
                HashedFile {
                  "hash": "d6KwN3ynLpzapNKcDIf8ytG9yHE=",
                  "name": "sample-result-component.tsx",
                },
              ],
              "hash": "TEbaVqLTCYBPiOLO0nll36zByWI=",
              "name": "sample-result-component",
            },
          ],
          "hash": "2rr+UEKfg3sYGI7t3rEsd9NaqaI=",
          "name": "components",
        },
        HashedFile {
          "hash": "zOAUK2vUx2PHWaGj0Rg/i3tFp7Q=",
          "name": "components.d.ts",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFile {
          "hash": "9rxSwzfvOxakEzQoDKgmmtgL2DU=",
          "name": "index.ts",
        },
        HashedFolder {
          "children": [],
          "hash": "2jmj7l5rSw0yVb/vlWAYkK/YBwk=",
          "name": "pages",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wOz9MvRYciTdXtc2nbTYjdqphzo=",
              "name": "index.css",
            },
          ],
          "hash": "/i4ylsDPXd6unLft/Rk/HO73WHE=",
          "name": "style",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "s62u03kWBMqmtpvRgY8dy/usU/c=",
              "name": "atomic.ts",
            },
          ],
          "hash": "Q9gDKXuZHVN4ikM70Un69oZ/GKg=",
          "name": "utils",
        },
      ],
      "hash": "BbDf+PumRFJhCAZDIzDYgYIWO+8=",
      "name": "src",
    },
    HashedFile {
      "hash": "9nyo2P7hCKS4uXz6KBbyR2tzRtY=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "qaUjZxOHtN3/gswBxyhbd1pU00g=",
  "name": "normalizedDir",
}
`;
